--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
 		<meta name="theme-color" content="#000000">
 		<meta content="IE=Edge" http-equiv="X-UA-Compatible">
 		<title>VK Mini App</title>
-		<script src="//cdn.jsdelivr.net/npm/eruda"></script>
-		<script>eruda.init();</script>
+<!--		<script src="//cdn.jsdelivr.net/npm/eruda"></script>-->
+<!--		<script>eruda.init();</script>-->
 		<!-- <script src="https://widget.unitpay.money/unitpay.js"></script> -->
 	</head>
 	<body>
